k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ambienttv
  labels:
    name: ambienttv
    app.kubernetes.io/name: ambienttv
    app.kubernetes.io/part-of: ambienttv
