k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ambienttv-redis
  namespace: ambienttv
  labels:
    app: ambienttv-redis
spec:
  selector:
    app: ambienttv-redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  type: ClusterIP
